1.5.90:
-Add: Make the 'Failed' status clickable and open the log if clicked
-Fix: Problem dialog wasn't shown when dropping unsupported files on the soundKonverter or ReplayGain tool window

1.5.0:
-Add: Update translations

1.4.90 (1.5.0 rc1):
-Add: Copy embedded covers for wma files
-Add: Calculate Album Gain for albums in the conversion list
-Add: Russian translation
-Change: Replace Spanish Argentinan translation (es_AR) with Spanish (es) since KDE isn't able to use es_AR translations
-Fix: Cdrom drive detection would fail with Ubuntu 12.04 (patch by Eike Thaden)
-Fix: Musicbrainz lookup not working if data track present (patch by Eike Thaden)
-Fix: Don't show data tracks in the CD ripper UI (patch by Eike Thaden)
-Fix: Musicbrainz lookup would only work through the freedb gateway (patch by Eike Thaden)

1.4.0:
-Add: Show progress bar when loading file lists

1.3.90 (1.4.0 rc1):
-Add: TTA Enc plugin
-Add: sad (Black & White audio file) support
-Add: Improved saving of the last used conversion profile
-Change: Reduce amount of alerts when dropping unsupported file types (like images) on the file list
-Fix: Files added with "add directory" could fail

1.3.3:
-Change: Piping is disabled by default, it can be activated in the config dialog though
-Fix: Some piping bugs with vorbistools and ffmpeg
-Fix: Crash when adding a directory

1.3.2:
-Fix: Crash when trying to write covers (attempt #2)

1.3.1:
-Add: Update translations
-Fix: Crash when trying to write covers

1.3.0:
-Add: Update translations

1.2.90 (1.3.0 rc1):
-Add: Copy embedded covers for ogg (only reading), mp3, mp4 and flac files
-Add: Option to copy embedded covers to the output directory
-Add: Honor total disc numbers
-Add: Session management
-Change: By default log files won't be written to the hard drive anymore, it can be activated in the config dialog though
-Fix: Conversion problems when using pipes with newer KDE/Qt versions
-Fix: Don't write empty tags